--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,51 @@
-name: Deploy to GitHub Pages
+name: Deploy NodeJS
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
+  build:
+    name: Build
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          node-version: '16' # veya kullandığınız Node.js sürümü
+          node-version: 16
+
       - name: Install dependencies
-        run: npm ci
-      - name: Build
+        uses: bahmutov/npm-install@v1
+
+      - name: Build project
         run: npm run build
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v3
         with:
-          folder: dist # Build çıktılarının olduğu klasör
-          branch: gh-pages
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit_message: Deploy to GitHub Pages
+          name: production-files
+          path: ./
+
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: production-files
+          path: ./dist
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
