--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "build --output public",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
